--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,18 @@ name = "ytm-rs"
 version = "0.1.0"
 edition = "2021"
 
+[build]
+incremental = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = "1.12.0"
+directories-next = "2.0.0"
 once_cell = "1.19.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tracing-subscriber = "0.3.18"
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 
 [dependencies.iced]
