--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-executor = "1.8.0"
 async-std = "1.12.0"
 chrono = "0.4.35"
 directories-next = "2.0.0"
+futures-lite = "2.3.0"
 iced_aw = "0.8.0"
 once_cell = "1.19.0"
+reqwest = { version = "0.12.1", features = ["json"] }
+reqwest-streams = "0.5.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] }
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
 rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
-features = ["svg"]
+features = ["svg", "debug", "lazy"]
