--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,14 @@ async-std = "1.12.0"
 chrono = "0.4.35"
 directories-next = "2.0.0"
 futures-lite = "2.3.0"
-iced_aw = "0.8.0"
+iced_aw = { version = "0.8.0", features = [
+    "color_picker",
+    "number_input",
+    "selection_list",
+] }
+kira = "0.8.7"
 once_cell = "1.19.0"
-reqwest = { version = "0.12.1", features = ["json"] }
+reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
@@ -24,4 +29,4 @@ uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
 rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
-features = ["svg", "debug", "lazy"]
+features = ["svg", "debug", "lazy", "tokio"]
