--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ once_cell = "1.19.0"
 reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
+serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["full"] }
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
