--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-executor = "1.8.0"
 async-std = "1.12.0"
 chrono = "0.4.35"
 directories-next = "2.0.0"
-futures-lite = "2.3.0"
-iced_aw = { version = "0.8.0", features = [
-    "color_picker",
-    "number_input",
-    "selection_list",
-] }
+# iced_aw = { version = "0.8.0", features = [
+#     "color_picker",
+#     "number_input",
+#     "selection_list",
+# ] }
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
 kira = "0.8.7"
 once_cell = "1.19.0"
@@ -23,7 +21,7 @@ reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 
