--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,13 @@ directories-next = "2.0.0"
 #     "selection_list",
 # ] }
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
-kira = "0.8.7"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
+rodio = { version = "0.17.3", features = ["wav"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
-tracing-subscriber = "0.3.18"
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 
 [dependencies.iced]
