--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,20 @@
 [project]
 name = "ytm-rs-backend"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "The backend for the ytm-rs project."
 authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
-dependencies = [
-    "yt-dlp>=2024.3.10",
-    "flask>=3.0.2",
-    "orjson>=3.9.15",
-]
-requires-python = ">= 3.10"
+dependencies = ["yt-dlp>=2024.3.10", "flask>=3.0.2", "orjson>=3.9.15"]
+requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "MIT" }
 
 
 [tool.pdm]
-distribution = false
+distribution = true
 
 [tool.pdm.dev-dependencies]
-dev = [
-]
+dev = []
+
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
