--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,12 @@ serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
 
+[dependencies.material-colors]
+git = "https://github.com/Aiving/material-colors"
+features = ["serde", "image"]
+
+
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
 rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
-features = ["svg", "debug", "lazy", "tokio", "image"]
+features = ["debug", "lazy", "tokio", "image", "canvas"]
