--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ directories-next = "2.0.0"
 #     "selection_list",
 # ] }
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
+itertools = "0.12.1"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
