--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
-iced_drop = { git = "https://github.com/zeptofine/iced_drop", version = "0.1.0" }
+
 
 [dependencies.material-colors]
 git = "https://github.com/Aiving/material-colors"
@@ -30,3 +30,9 @@ git = "https://github.com/iced-rs/iced.git"
 rev = "a05b8044a9a82c1802d4d97f1723e24b9d9dad9c"
 # default-features = false
 features = ["debug", "lazy", "tokio", "image", "canvas", "advanced"]
+
+
+[dependencies.iced_drop]
+git = "https://github.com/zeptofine/iced_drop"
+# path = "../iced_drop"
+branch = "with_drag"
