--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,12 @@ features = ["serde", "image"]
 
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
-rev = "a05b8044a9a82c1802d4d97f1723e24b9d9dad9c"
+rev = "d5bb6deb2fe15790d9ffe37243592189f1dd28c5"
 # default-features = false
 features = ["debug", "lazy", "tokio", "image", "canvas", "advanced"]
 
 
 [dependencies.iced_drop]
 git = "https://github.com/zeptofine/iced_drop"
-branch = "offset_scrollables"
+branch = "ytmrs"
 # path = "../iced_drop"
