--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-process = "2.2.2"
 async-std = "1.12.0"
 directories-next = "2.0.0"
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
@@ -18,6 +19,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
 uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
+which = "6.0.1"
 
 
 [dependencies.material-colors]
@@ -36,3 +38,6 @@ features = ["debug", "lazy", "tokio", "image", "canvas", "advanced"]
 git = "https://github.com/zeptofine/iced_drop"
 branch = "ytmrs"
 # path = "../iced_drop"
+
+[dev-dependencies]
+tempfile = "3.10.1"
