--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 async-std = "1.12.0"
 directories-next = "2.0.0"
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
+kittyaudio = "0.1.9"
 once_cell = "1.19.0"
 rand = { version = "0.8.5" }
 reqwest = { version = "0.12.1", features = ["json", "blocking"] }
 reqwest-streams = "0.5.1"
-rodio = { version = "0.17.3", features = ["wav"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
 tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
