--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,13 @@ name = "ytm-rs-backend"
 version = "0.1.0"
 description = "The backend for the ytm-rs project."
 authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
-dependencies = ["yt-dlp>=2024.3.10", "flask>=3.0.2", "orjson>=3.9.15"]
-requires-python = ">=3.10"
+dependencies = [
+    "yt-dlp>=2024.3.10",
+    "flask>=3.0.2",
+    "orjson>=3.9.15",
+    "brotli>=1.1.0",
+]
+requires-python = ">=3.8"
 readme = "README.md"
 license = { text = "MIT" }
 
