--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ytm-rs"
+name = "ytm-rs-backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "The backend for the ytm-rs project."
 authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
 dependencies = [
     "yt-dlp>=2024.3.10",
@@ -9,19 +9,17 @@ dependencies = [
     "orjson>=3.9.15",
     "brotli>=1.1.0",
 ]
+requires-python = ">=3.8"
 readme = "README.md"
-requires-python = ">= 3.8"
+license = { text = "MIT" }
+
+
+[tool.pdm]
+distribution = true
+
+[tool.pdm.dev-dependencies]
+dev = []
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = []
-
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/ytm_rs"]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
