--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ features = ["serde", "image"]
 git = "https://github.com/iced-rs/iced.git"
 rev = "d5bb6deb2fe15790d9ffe37243592189f1dd28c5"
 # default-features = false
-features = ["debug", "lazy", "tokio", "image", "canvas", "advanced"]
+features = ["debug", "lazy", "tokio", "image", "canvas", "advanced", "svg"]
 
 [dependencies.iced_drop]
 git = "https://github.com/zeptofine/iced_drop"
