--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 async-std = "1.12.0"
 directories-next = "2.0.0"
-kittyaudio = "0.1.9"
+kittyaudio = { version = "0.1.9", features = ["symphonia"] }
 once_cell = "1.19.0"
 rand = { version = "0.8.5" }
 reqwest = { version = "0.12.1", features = ["json", "blocking"] }
@@ -23,6 +23,7 @@ image = { version = "0.25.0", features = [
     "png",
     "jpeg",
 ], optional = true }
+symphonia = "0.5.4"
 
 [dependencies.material-colors]
 git = "https://github.com/Aiving/material-colors"
