--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,10 @@ directories-next = "2.0.0"
 kittyaudio = { version = "0.1.9", features = ["symphonia"] }
 once_cell = "1.19.0"
 rand = { version = "0.8.5" }
-reqwest = { version = "0.12.1", features = ["json", "blocking"] }
-reqwest-streams = "0.5.1"
+reqwest = { version = "0.12.1", features = ["json", "blocking", "stream"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
-tokio = { version = "1.36.0", features = ["time"] }
+tokio = { version = "1.36.0", features = ["time", "macros"] }
 uuid = { version = "1.8.0", features = ['v4', 'serde'] }
 which = "6.0.1"
 image = { version = "0.25.0", features = [
@@ -24,6 +23,9 @@ image = { version = "0.25.0", features = [
     "jpeg",
 ], optional = true }
 symphonia = "0.5.4"
+itertools = "0.13.0"
+tokio-util = { version = "0.7.11", features = ["io"] }
+futures-util = "0.3.30"
 
 [dependencies.material-colors]
 git = "https://github.com/Aiving/material-colors"
@@ -46,7 +48,6 @@ tempfile = "3.10.1"
 
 
 [features]
-default = ["svg", "thumbnails"]
 
 svg = ["iced/svg"]
 thumbnails = ["iced/image", "dep:image", "dep:material-colors"]
