--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
 async-std = "1.12.0"
 directories-next = "2.0.0"
 once_cell = "1.19.0"
@@ -13,56 +14,42 @@ rand = { version = "0.8.5" }
 reqwest = { version = "0.12.1", features = ["json", "blocking", "stream"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.114", features = [] }
-tokio = { version = "1.36.0", features = ["time", "macros"] }
-uuid = { version = "1.8.0", features = ['v4', 'serde'] }
+tokio = { version = "1.36.0", features = ["time", "macros", "parking_lot"] }
+uuid = { version = "1.8.0", features = ['v4', 'serde', 'fast-rng'] }
 which = "6.0.1"
-image = { version = "0.25.0", features = [
-    "webp",
-    "png",
-    "jpeg",
-], optional = true }
 symphonia = "0.5.4"
 itertools = "0.13.0"
 tokio-util = { version = "0.7.11", features = ["io"] }
 futures-util = "0.3.30"
 futures = "0.3.30"
 async-mutex = "1.4.0"
+parking_lot = "0.12.3"
+kira = { version = "0.9.2", features = ["serde"] }
+tempfile = "3.10.1"
 
-[dependencies.kittyaudio]
-version = "0.1.9"
-# path = "../kittyaudio"
-features = ["symphonia"]
 
 [dependencies.material-colors]
 git = "https://github.com/Aiving/material-colors"
 features = ["serde", "image"]
-optional = true
+
 
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
 rev = "8d1e639c5d34fd9463b0868113612e437973df8c"
 # default-features = false
-features = ["debug", "lazy", "tokio", "advanced"]
+features = ["debug", "lazy", "tokio", "advanced", "image"]
 
 [dependencies.iced_drop]
 git = "https://github.com/zeptofine/iced_drop"
 branch = "ytmrs"
 # path = "../iced_drop"
 
-[dev-dependencies]
-tempfile = "3.10.1"
-
 
 [features]
-default = ["svg", "thumbnails"]
+default = ["svg"]
 
 svg = ["iced/svg"]
-thumbnails = ["iced/image", "dep:image", "dep:material-colors"]
-optimizations = ["uuid/fast-rng", "tokio/parking_lot"]
 
-
-[profile.release]
-lto = "thin"
 
 [profile.release-fat]
 inherits = "release"
