--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ async-mutex = "1.4.0"
 parking_lot = "0.12.3"
 kira = { version = "0.9.2", features = ["serde"] }
 tempfile = "3.10.1"
+fslock = "0.2.1"
+fs4 = { version = "0.8.3", features = ["tokio", "async-std"] }
 
 
 [dependencies.material-colors]
