--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ kira = { version = "0.9.2", features = ["serde"] }
 tempfile = "3.10.1"
 fslock = "0.2.1"
 fs4 = { version = "0.8.3", features = ["tokio", "async-std"] }
+lilt = "0.6.0"
 
 
 [dependencies.material-colors]
@@ -37,14 +38,9 @@ features = ["serde", "image"]
 
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
-rev = "8d1e639c5d34fd9463b0868113612e437973df8c"
+rev = "bdf0430880f5c29443f5f0a0ae4895866dfef4c6"
 # default-features = false
 features = ["debug", "lazy", "tokio", "advanced", "image"]
-
-[dependencies.iced_drop]
-git = "https://github.com/zeptofine/iced_drop"
-branch = "ytmrs"
-# path = "../iced_drop"
 
 
 [features]
