--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "The backend for the ytm-rs project."
 authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
 dependencies = [
     "yt-dlp>=2024.3.10",
+    # "yt-dlp-youtube-oauth2 @ git+https://github.com/coletdjnz/yt-dlp-youtube-oauth2",
     "flask>=3.0.2",
     "orjson>=3.9.15",
     "brotli>=1.1.0",
