--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# ui
 image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
+iced = { version = "0.13.1", features = [
+    "debug",
+    "lazy",
+    "tokio",
+    "advanced",
+    "image",
+] }
+lilt = "0.6.0"
+
 async-std = "1.12.0"
 directories-next = "2.0.0"
 once_cell = "1.19.0"
@@ -22,25 +32,17 @@ itertools = "0.13.0"
 tokio-util = { version = "0.7.11", features = ["io"] }
 futures-util = "0.3.30"
 futures = "0.3.30"
-async-mutex = "1.4.0"
 parking_lot = "0.12.3"
 kira = { version = "0.9.2", features = ["serde"] }
 tempfile = "3.10.1"
 fslock = "0.2.1"
 fs4 = { version = "0.8.3", features = ["tokio", "async-std"] }
-lilt = "0.6.0"
+rfd = "0.15.2"
 
 
 [dependencies.material-colors]
 git = "https://github.com/Aiving/material-colors"
 features = ["serde", "image"]
-
-
-[dependencies.iced]
-git = "https://github.com/iced-rs/iced.git"
-rev = "bdf0430880f5c29443f5f0a0ae4895866dfef4c6"
-# default-features = false
-features = ["debug", "lazy", "tokio", "advanced", "image"]
 
 
 [features]
